external-crates/move/crates/move-compiler/tests/move_check/parser/unmatched_restricted_identifier_no_text.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01012]: invalid identifier escape
  ┌─ tests/move_check/parser/unmatched_restricted_identifier_no_text.move:4:9
  │
4 │     fun `
  │         ^ Missing closing backtick (`) for restricted identifier escaping
